--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "strapi-plugin-settings-manager": "3.0.0-beta.14",
     "strapi-plugin-upload": "3.0.0-beta.14",
     "strapi-plugin-users-permissions": "3.0.0-beta.14",
+    "strapi-provider-email-nodemailer": "^1.0.3",
     "strapi-utils": "3.0.0-beta.14"
   },
   "author": {
